testdata/routing/ingress/caddy-secure.yaml
apiVersion: v1
kind: List
items:
  - apiVersion: v1
    kind: Pod
    metadata:
        labels:
          name: caddy-pods
        name: caddy-secret
    spec:
      volumes:
        - name: service-secret
          secret:
            secretName: service-secret
      containers:
        - volumeMounts:
            - name: service-secret
              mountPath: /srv/service-secret
              readOnly: true
          name: caddy-docker
          image: 'quarterpin/caddybuilds:secret'
          ports:
            - containerPort: 8080
            - containerPort: 8443
            - containerPort: 514
  - apiVersion: v1
    kind: Service
    metadata:
      labels:
        name: service-unsecure
      name: service-unsecure
    spec:
      ports:
        - name: http
          port: 27017
          protocol: TCP
          targetPort: 8080
          selector:
            name: caddy-pods
