testdata/routing/ingress/ingress-passth-resource.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-passth
  annotations:
    route.openshift.io/termination: passthrough
spec:
  rules:
  - host: service-project.example.com
    http:
      paths:
      - path: ''
        pathType: ImplementationSpecific
        backend:
          service:
            name: service-secure
            port: 
              number: 27443
