testdata/routing/ingress/ingress-resource.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-edge
  annotations:
    route.openshift.io/termination: "edge"
spec:
  rules:
  - host: service-unsecure-example.com
    http:
      paths:
      - path: "/"
        backend:
          service:
            name: service-unsecure
            port: 
              number: 27017
        pathType: "Prefix"
  tls:
  - hosts:
    - service-unsecure.example.com
    secretName: ingress-secret
