testdata/routing/ingress/ingress-secret.yaml
apiVersion: v1
kind: Secret
data:
  tls.crt: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURFekNDQWZ1Z0F3SUJBZ0lCRGpBTkJna3Foa2lHOXcwQkFRVUZBRENCb1RFTE1Ba0dBMVVFQmhNQ1ZWTXgKQ3pBSkJnTlZCQWdNQWxORE1SVXdFd1lEVlFRSERBeEVaV1poZFd4MElFTnBkSGt4SERBYUJnTlZCQW9NRTBSbApabUYxYkhRZ1EyOXRjR0Z1ZVNCTWRHUXhFREFPQmdOVkJBc01CMVJsYzNRZ1EwRXhHakFZQmdOVkJBTU1FWGQzCmR5NWxlR0Z0Y0d4bFkyRXVZMjl0TVNJd0lBWUpLb1pJaHZjTkFRa0JGaE5sZUdGdGNHeGxRR1Y0WVcxd2JHVXUKWTI5dE1CNFhEVEUyTURVeU5UQTRNVEkxT0ZvWERUSTJNRFV5TXpBNE1USTFPRm93YlRFV01CUUdBMVVFQXd3TgpLaTVsZUdGdGNHeGxMb [...]
  tls.key: LS0tLS1CRUdJTiBQUklWQVRFIEtFWS0tLS0tCk1JSUNkd0lCQURBTkJna3Foa2lHOXcwQkFRRUZBQVNDQW1Fd2dnSmRBZ0VBQW9HQkFLQVJ6Y08yMGxjZytxRGYKZTl4QUVkZTJkYlVpajlMV2NsWC9WZkdwMFhoeWR6Zi9PRG1MNWMvSXkvY3hnS3ZvbzdEWlR1UFlzWHJTN3o5dQp1TEk0UzRzdHFqL24yMUtyWUl3RGRJWHZhT2M2Q1RUUXhxVUUyMExaMDhMa1I4QkxyYTRMYm43bGhsUmdheU9NCkNsZmRVTDQ3NEN2MFM0T2xEUzA3aWRiRDFrWHpBZ01CQUFFQ2dZQTl2TUF0RlUxcFY0bnpGRjlVWXMyKzhsdlIKNGlPd3dROVdSZVlqRUVsL2VENnROVjI5TEUwVjZDOXJCd2ZHeGpLa1doeElXdUtSS2R3bkRoQmtoTHYxdFAxOApvQ0ZhZHprdzFlTmc2R [...]
metadata:
  name: ingress-secret
type: kubernetes.io/tls
