testdata/routing/ingress/signed-service.json
{
    "kind": "Service",
    "apiVersion": "v1",
    "metadata": {
       "annotations" : {
            "service.beta.openshift.io/serving-cert-secret-name" : "service-secret"
              },
       "labels": {
            "name": "service-secure"
             },
        "name": "service-secure"
    },
    "spec": {
        "ports": [
                {
                        "name": "https",
                        "protocol": "TCP",
                        "port": 27443,
        "targetPort": 8443
                }
        ],
        "selector": {
                "name": "caddy-pods"
        }
    }
}
