testdata/routing/ingress/web-server-OCP-37714.yaml
apiVersion: v1
kind: List
items:
- apiVersion: v1
  kind: ConfigMap
  metadata:
    name: nginx-config
  data:
    nginx.conf: |
      events {
          worker_connections 1024;
      }
      http {
        server {
          listen 8080;
          location / {
          default_type text/plain;
          expires -1;
          return 200 'Server address: $server_addr:$server_port\nServer name: $hostname\nDate: $time_local\nURI: $request_uri\nRequest ID: $request_id\n';
          }
        } 
      }
- apiVersion: v1
  kind: ReplicationController
  metadata:
    labels:
      name: web-server-rc
    name: web-server-rc
  spec:
    replicas: 1
    template:
      metadata:
        labels:
          name: web-server-rc
      spec:
        containers:
        - name: liveness
          image: quay.io/openshifttest/nginx-alpine@sha256:5d3f3372288b8a93fc9fc7747925df2328c24db41e4b4226126c3af293c5ad88
          readinessProbe:
            exec:
              command:
              - cat
              - /tmp/ready
            initialDelaySeconds: 5
            periodSeconds: 5
          volumeMounts:
          - name: nginx-config
            mountPath: /etc/nginx/
        volumes:
        - name: nginx-config
          configMap:
            name: nginx-config
- apiVersion: v1
  kind: Service
  metadata:
    labels:
      name: service-unsecure
    name: service-unsecure
  spec:
    ports:
    - name: http
      port: 27017
      protocol: TCP
      targetPort: 8080
    selector:
      name: web-server-rc
