testdata/routing/ingress/web-server-secret-rc.yaml
apiVersion: v1
kind: List
items:
- apiVersion: v1
  kind: ConfigMap
  metadata:
    name: nginx-config
  data:
    nginx.conf: |
      events {
          worker_connections 1024;
      }

      http {
          server {
              listen		8080;
              location / {
                  root /data/http;
              }
          }

          server {
              listen           	    8443 ssl http2 default;
              listen           	    [::]:8443 ssl http2 default;              
              server_name      	    _;
              ssl_certificate  	    certs/tls.crt;
              ssl_certificate_key  	certs/tls.key;
              location / {
                  root /data/https-default;
              }
          }
      }
- apiVersion: v1
  kind: ReplicationController
  metadata:
    labels:
      name: web-server-rc
    name: web-server-rc
  spec:
    replicas: 1
    template:
      metadata:
        labels:
          name: web-server-rc
      spec:
        containers:
        - name: nginx
          image: quay.io/openshifttest/nginx-alpine@sha256:7b888a83dc936934b7bb49b103df41b53d28fa58795ceb86b50ee280dca4257c
          volumeMounts:
          - name: service-secret
            mountPath: /etc/nginx/certs/
          - name: nginx-config
            mountPath: /etc/nginx/       
        volumes:
        - name: service-secret
          secret:
            secretName: service-secret
        - name: nginx-config
          configMap:
            name: nginx-config
